tests/e2e/semantics/mutation/arg_required.error
Error: syntax error in story at line 1, column 21

1|    a = [1, 2].contains()
                          ^

E0041: `)` is not allowed here
